--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "mongoose": "^8.19.4",
     "next": "16.0.3",
     "react": "19.2.0",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/css-modules": "^1.0.5",
     "@types/node": "^20",
     "@types/react": "^19",
