--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^6.0.0",
     "mongoose": "^8.19.4",
     "next": "16.0.3",
+    "next-auth": "^5.0.0-beta.30",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0"
